To allow pins and pan/zoom to be clicked in IE6 and IE7, the container must also be reduced to the minimum width to prevent invisible coverage. #246

--- a/web/cobrands/fixmystreet/layout.scss
+++ b/web/cobrands/fixmystreet/layout.scss
@@ -231,6 +231,10 @@ body.mappage {
 }
 .ie6, .ie7 {
   body.mappage {
+    .container {
+      float: left;
+      width: 27em;
+    }
     .nav-wrapper{
       z-index:1;
       .nav-wrapper-2 {
